--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
     </properties>
 
     <dependencies>
+	<dependency>
+    		<groupId>org.javassist</groupId>
+  		  <artifactId>javassist</artifactId>
+   		 <version>3.23.1-GA</version>
+	</dependency>	
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -43,7 +49,8 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <version>8.0.11</version>
+	    <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
